# example-project

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  exampleLib.cpp  main.cpp
